# genai_challenge

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.frontend  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/documents/: code_of_conduct.txt  company_handbook.txt  expense_policy.txt  faq.txt  integration_guide.txt  onboarding_guide.txt  product_guide.txt  refund_policy.txt  release_notes.txt  security_policy.txt  technical_support.txt
scripts/: entrypoint.sh  ingest_documents.py
src/genai_challenge/: config.py  main.py
src/genai_challenge/adapters/: chroma.py  ollama.py
src/genai_challenge/api/routes/: chat.py  health.py  rag.py
src/genai_challenge/api/schemas/: chat.py  rag.py
src/genai_challenge/core/: logging.py  metrics.py  middleware.py  prompts.py
src/genai_challenge/frontend/: app.py
src/genai_challenge/services/: llm_service.py  memory.py  rag_service.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_llm_service.py  test_memory.py  test_rag_service.py  test_schemas.py
